--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -5,25 +5,25 @@
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <p>
+    <p *ngIf="novedad.contrato.contratacion.contratista != null">
       <strong>
         Nombre del contratista:
       </strong>
       {{ novedad.contrato.contratacion.contratista.nombre }}
     </p>
-    <p>
+    <p *ngIf="novedad.contrato.contratacion.contratista != null">
       <strong>Tipo de identificación:</strong>
       <span>
         {{ novedad.contrato.contratacion.contratista.tipoIdentificacionNotMapped }}
       </span>
     </p>
-    <p>
+    <p *ngIf="novedad.contrato.contratacion.contratista != null">
       <strong>
         Número de identificación
       </strong>
       {{ novedad.contrato.contratacion.contratista.numeroIdentificacion }}
     </p>
-    <p>
+    <p *ngIf="novedad.proyectosContrato.length > 0">
       <strong>Tipo de intervención:</strong>
       <span>
         {{ novedad.proyectosContrato[0].tipoIntervencion }}
