--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
@@ -53,6 +53,7 @@
 
     <app-control-solicitudes-traslado-gbftrec   [proyectoId]="proyectoId"
                                                 [esRegistroNuevo]="esRegistroNuevo"
+                                                [proyecto]="proyecto"
                                                 [esVerDetalle]="esVerDetalle">
     </app-control-solicitudes-traslado-gbftrec>
 </section>
