--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -78,7 +78,7 @@
         </span>
     </div>
     <div class="text-center mb-2em mt-2em">
-        <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === true">
+        <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
             <img src="assets/img/icon/guardar.svg" alt="Regresar">
         </button>
     </div>
