--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
@@ -62,49 +62,55 @@
                                                                 <p><b>Nombre del aportante: </b> {{ aportante.get( 'nombreAportante' ).value.nombreAportante }} </p>
                                                                 <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( getValueFuente( aportante.get('fuenteRecursos').value, aportante.get( 'fuenteDeRecursos' ).value ) ) }} </p>
                                                                 <p><b>Valor del descuento: </b> {{ aportante.get( 'valorDescuento' ).value | currency:'':'symbol-narrow': '.0-0' }} </p>
-                                                                <div class="row" [formGroup]="aportante">
-                                                                    <div class="col-md-8">
-                                                                        <div class="row">
-                                                                            <div class="pr-1">
-                                                                                <label  class="label-left"
-                                                                                        for="valorDescuento"
-                                                                                        [ngClass]="{ 'color-secondaryColor': (getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).touched) || (getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && esRegistroNuevo === false) }">
-                                                                                        Nuevo valor por el concepto para el aportante
-                                                                                </label>
-                                                                            </div>
-                                                                            <div class="col d-flex">
-                                                                                <mat-form-field class="full-width w-75">
-                                                                                    <input  matInput
-                                                                                            #nuevoValorDescuento
-                                                                                            min="0"
-                                                                                            currencyMask
-                                                                                            maxlength="20"
-                                                                                            required
-                                                                                            formControlName="nuevoValorDescuento"
-                                                                                            (keypress)="validateNumberKeypress($event)"
-                                                                                            (ngModelChange)="checkValue( $event, i, j, k, l, m )"
-                                                                                            onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                                                                                            oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
-                                                                                            [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
-                                                                                </mat-form-field>
-                                                                                <span   class="contador"
-                                                                                        [matTooltipPosition]="'above'"
-                                                                                        matTooltip="Valor en ($) Pesos colombianos"
-                                                                                        matTooltipClass="info-tooltip">{{20 - nuevoValorDescuento.value.length}}
-                                                                                </span>
+                                                                <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+                                                                    <p><b>Nuevo valor por el concepto para el aportante: </b> {{ aportante.get( 'nuevoValorDescuento' ).value | currency:'':'symbol-narrow': '.0-0' }} </p>
+                                                                </ng-container>
+                                                                <ng-template #noEsVerDetalle>
+                                                                    <div class="row" [formGroup]="aportante">
+                                                                        <div class="col-md-8">
+                                                                            <div class="row">
+                                                                                <div class="pr-1">
+                                                                                    <label  class="label-left"
+                                                                                            for="valorDescuento"
+                                                                                            [ngClass]="{ 'color-secondaryColor': (getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).touched) || (getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && esRegistroNuevo === false) }">
+                                                                                            Nuevo valor por el concepto para el aportante
+                                                                                    </label>
+                                                                                </div>
+                                                                                <div class="col d-flex">
+                                                                                    <mat-form-field class="full-width w-75">
+                                                                                        <input  matInput
+                                                                                                #nuevoValorDescuento
+                                                                                                min="0"
+                                                                                                currencyMask
+                                                                                                maxlength="20"
+                                                                                                required
+                                                                                                formControlName="nuevoValorDescuento"
+                                                                                                (keypress)="validateNumberKeypress($event)"
+                                                                                                (ngModelChange)="checkValue( $event, i, j, k, l, m )"
+                                                                                                onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                                                                                oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                                                                                                [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
+                                                                                    </mat-form-field>
+                                                                                    <span   class="contador"
+                                                                                            [matTooltipPosition]="'above'"
+                                                                                            matTooltip="Valor en ($) Pesos colombianos"
+                                                                                            matTooltipClass="info-tooltip">{{20 - nuevoValorDescuento.value.length}}
+                                                                                    </span>
+                                                                                </div>
                                                                             </div>
                                                                         </div>
+                                                                        <span class="icon-incompleto">
+                                                                            <img    class="icon-incompleto--img"
+                                                                                    src="assets/img/icon/incompleto.svg"
+                                                                                    alt="este campo es requerido"
+                                                                                    [matTooltipPosition]="'above'"
+                                                                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                                                                    matTooltipClass="info-tooltip"
+                                                                                    *ngIf="(getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).touched) || (getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && esRegistroNuevo === false)">
+                                                                        </span>
                                                                     </div>
-                                                                    <span class="icon-incompleto">
-                                                                        <img    class="icon-incompleto--img"
-                                                                                src="assets/img/icon/incompleto.svg"
-                                                                                alt="este campo es requerido"
-                                                                                [matTooltipPosition]="'above'"
-                                                                                matTooltip="Debe ingresar la información en el campo para continuar"
-                                                                                matTooltipClass="info-tooltip"
-                                                                                *ngIf="(getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).touched) || (getAportantes( i, j, k, l ).controls[ m ].get( 'nuevoValorDescuento' ).invalid && esRegistroNuevo === false)">
-                                                                    </span>
-                                                                </div>
+                                                                </ng-template>
+                                                                
                                                             </div>
                                                         </div>
                                                     </div>
