--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-traslados-gbftrec/tabla-traslados-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-traslados-gbftrec/tabla-traslados-gbftrec.component.html
@@ -38,7 +38,10 @@
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" class="btn-table">
                     Aprobar traslado</button>
-                <button mat-raised-button color="accent" class="btn-table">
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/verDetalleEditarTraslado', element.id, element.numOrdenGiro ]">
                     Ver detalle/Editar</button>
                 <button mat-raised-button color="accent" class="btn-table" (click)="this.anularTraslado(element.id)">
                     Anular traslado</button>
