--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro/form-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro/form-orden-giro.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="esRegistroNuevo === true; else elseTemplate">
+<ng-container *ngIf="esRegistroNuevo === true && esVerDetalle === false; else elseTemplate">
     <div class="animatedDown">
         <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
             Seleccione la orden de giro que requiere ajuste en la facturación
