--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/control-solicitudes-traslado-gbftrec/control-solicitudes-traslado-gbftrec.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="addressForm">
-    <mat-card class="shipping-card" *ngIf="esRegistroNuevo === true">
+    <mat-card class="shipping-card" *ngIf="esRegistroNuevo === true && esVerDetalle === false">
         <mat-card-content align="left">
             <div class="row" style="height: 45px;">
                 <div class="col-md-6">
