--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-traslados-gbftrec/tabla-traslados-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-traslados-gbftrec/tabla-traslados-gbftrec.component.html
@@ -11,40 +11,59 @@
     <table mat-table [dataSource]="dataSource" matSort class="tabla mat-elevation-z8 text-center">
         <ng-container matColumnDef="fechaTraslado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de traslado </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.fechaTraslado}}</b> </td>
+            <td mat-cell *matCellDef="let element"> <b>{{element.fechaCreacion}}</b> </td>
         </ng-container>
         <ng-container matColumnDef="numTraslado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslado </th>
-            <td mat-cell *matCellDef="let element"><em>{{element.numTraslado}}</em> </td>
+            <td mat-cell *matCellDef="let element"><em>{{element.numeroTraslado}}</em> </td>
         </ng-container>
         <ng-container matColumnDef="numContrato">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de contrato</th>
-            <td mat-cell *matCellDef="let element"><em>{{element.numContrato}}</em> </td>
+            <td mat-cell *matCellDef="let element"><em>{{element.numeroContrato}}</em> </td>
         </ng-container>
         <ng-container matColumnDef="numOrdenGiro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Número de orden de giro</th>
-            <td mat-cell *matCellDef="let element"> <em>{{element.numOrdenGiro}}</em> </td>
+            <td mat-cell *matCellDef="let element"> <em>{{element.numeroOrdenGiro}}</em> </td>
         </ng-container>
         <ng-container matColumnDef="valorTraslado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor del traslado</th>
-            <td mat-cell *matCellDef="let element"> <em>{{element.valorTraslado}}</em> </td>
+            <td mat-cell *matCellDef="let element"> <em>{{element.valorTraslado | currency: '':'symbol-narrow':'.0-0'}}</em> </td>
         </ng-container>
         <ng-container matColumnDef="estadoTraslado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del traslado</th>
-            <td mat-cell *matCellDef="let element"> <em>{{element.estadoTraslado}}</em> </td>
+            <td mat-cell *matCellDef="let element"> <em>{{getEstadoTraslado( element.estadoCodigo )}}</em> </td>
         </ng-container>
         <ng-container matColumnDef="gestion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" class="btn-table">
-                    Aprobar traslado</button>
                 <button mat-raised-button
                         color="accent"
                         class="btn-table"
-                        [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/verDetalleEditarTraslado', element.id, element.numOrdenGiro ]">
-                    Ver detalle/Editar</button>
-                <button mat-raised-button color="accent" class="btn-table" (click)="this.anularTraslado(element.id)">
-                    Anular traslado</button>
+                        *ngIf="estadoTraslado.conRegistro === element.estadoCodigo && element.registroCompleto === true"
+                        (click)="getAprobarTraslado( element )">
+                        Aprobar traslado
+                </button>
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        *ngIf="estadoTraslado.conRegistro === element.estadoCodigo"
+                        [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/verDetalleEditarTraslado', this.proyectoId, element.numeroOrdenGiro ]">
+                        Ver detalle/Editar
+                </button>
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        *ngIf="estadoTraslado.anulado === element.estadoCodigo || estadoTraslado.trasladoAprobado === element.estadoCodigo"
+                        [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/verDetalleTraslado', this.proyectoId, element.numeroOrdenGiro ]">
+                        Ver detalle
+                </button>
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        *ngIf="estadoTraslado.conRegistro === element.estadoCodigo && element.registroCompleto === true"
+                        (click)="getAnularTraslado( element )">
+                        Anular traslado
+                </button>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
