--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -117,4 +117,4 @@
       *ngIf="addressForm.get('requiereTransladoRecursos').value === true && addressForm.get( 'justificacionTrasladoAportanteFuente' ).value !== null && balanceFinancieroId > 0">
     <a [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado', id ]" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>  
 </div>
-<app-tabla-traslados-gbftrec *ngIf="addressForm.get('requiereTransladoRecursos').value === true"></app-tabla-traslados-gbftrec>
+<app-tabla-traslados-gbftrec *ngIf="addressForm.get('requiereTransladoRecursos').value === true && balanceFinancieroTraslado.length > 0" [balanceFinancieroTraslado]="balanceFinancieroTraslado"></app-tabla-traslados-gbftrec>
